bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: value update is not a member of String
while (estSurMessage()) {if (litMessage() = "R") {droite()}
                             ^BDR:2: error: value update is not a member of String
                     else if (litMessage() = "L") {gauche()}
                              ^BDR:3: error: value update is not a member of String
                     else if (litMessage() = "L") {gauche()}
                              ^BDR:4: error: value update is not a member of String
                     else if (litMessage() = "I") {retourne()}
                              ^BDR:5: error: value update is not a member of String
                     else if (litMessage() = "A") {avance(1)}
                              ^BDR:6: error: value update is not a member of String
                     else if (litMessage() = "L") {avance(2)}
                              ^BDR:7: error: value update is not a member of String
                     else if (litMessage() = "C") {avance(3)}
                              ^BDR:8: error: value update is not a member of String
                     else if (litMessage() = "Z") {recule(1)}
                              ^BDR:9: error: value update is not a member of String
                      else if (litMessage() = "Z") {recule(2)}
                               ^BDR:10: error: value update is not a member of String
                     else if (litMessage() = "Z") {recule(3)}
                              ^